
!! --- PLEASE NOTE --- !!
||  Sky bison controls ||
|| have changed - left ||
|| click to mount them ||
||     ~  also  ~      ||
|| Bison whistles can  ||
||     be crafted      ||
||    bit.ly/2stv3aA   ||
!! --- --- --- --- --- !!

* Water pouches can now hold up to 5 water
* New bending tab icons from FavouriteDragon
* Skills menu opens at current bending
* Regen chi on sleep
* Fire arc does additional damage & push on hit
* Floating block boomerang requires additional chi
* Creative mode allows bypass locked abilities
* Level 4 upgrade name is displayed in radial menu
* Message when bison has no chest slots yet
* Feeding tall grass to in-love bison stops it from breeding
* Bison only follow you if you are holding a whistle
* Control change, left-click bison to ride it
* Control change, sneak-left-click bison to access inventory
* Air bubble Undercurrent upgrade floats the player up
* Ravine Fissure upgrade won't destroy blocks under player
* Nerf air bubble Undercurrent health
* Bison whistles can be crafted
* Increase flamethrower chi requirements

> Fix penguin, firebender, and airbender name tags being shown
> Fix cracked account issues - gen fake account UUID based on username
> Fix crash when killing entity without a registered lang file name
> Fix wall w/ floating block causing item duplication
> Fix issue w/ summoning sky bison (having to do with IDs)
> Fix air jump not working issues (path block, on edge of block, etc)
> Fix fire arc boomerang not working
> Fix air jump XP not added
> Fix fireballs remaining after firebender entity dies
> Fix bison breeding too often (every 30-60 seconds)
> Fix chat formatting messed up on server console
> Fix air bubble Undercurrent upgrade not working on leaves
> Fix bison saddle duplication
> Fix no XP gain for water bubble
> Fix airblade level II not faster
> Fix air bubble not properly protecting from damage
> Fix airblade chainblade issues
> Remove old "click to open" prompt in radial menu